--- a/stitches.css
+++ b/stitches.css
@@ -41,6 +41,12 @@
   .order-last {
     order: 99999;
   }
+  .column-0 {
+    column-count: auto;
+  }
+  .column-2 {
+    column-count: 2;
+  }
 }
 .-translate-50-50 {
   transform: translate(-50%, -50%);
