--- a/templates/cta-2.html
+++ b/templates/cta-2.html
@@ -1,5 +1,5 @@
 <section class="font-sans text-center py-8 px-4 lg:px-0 bg-grey-lightest">
-  <div class="container flex flex-col sm:flex-row bg-white max-w-xl m-auto">
+  <div class="container flex flex-col sm:flex-row bg-white max-w-xl m-auto shadow">
     <div class="w-full sm:w-3/4 px-6 pt-6 text-left flex flex-col justify-center">
       <h2 class="capitalize font-medium">Ready to get started?</h2>
       <p class="text-grey-dark mt-2 mb-6">But I must explain to you how all this mistaken idea of denouncing </p>
