add cards 2 template

--- a/templates/stats-2.html
+++ b/templates/stats-2.html
@@ -1,5 +1,5 @@
 <section class="bg-white py-4 font-sans">
-  <div class="container container max-w-xl m-auto flex flex-wrap md:flex-no-wrap items-center justify-between">
+  <div class="container max-w-xl m-auto flex flex-wrap md:flex-no-wrap items-center justify-between">
     <div class="flex w-full justify-start justify-center md:justify-start">
       <div class="flex flex-col border-r px-8 items-center">
         <h1 class="">34%</h1>
