--- a/templates/features-6.html
+++ b/templates/features-6.html
@@ -11,7 +11,7 @@
     <p class="text-sm text-grey-dark leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
     </div>
   <div class="order-1 lg:order-2 w-full lg:w-1/2 max-w-xs m-auto mb-6 lg:mb-0">
-    <img src="./demo-phone.png" alt="">
+    <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-phone.png" alt="">
   </div>
   <div class="order-last w-full lg:w-1/4 flex flex-col items-center lg:items-start justify-end text-center lg:text-left mt-8 mr-8">
     <img class="w-6 h-6 rounded-full bg-grey-light mb-2" src="" alt="Avatar of Jonathan Reinink">
