--- a/templates/footer-3.html
+++ b/templates/footer-3.html
@@ -1,7 +1,7 @@
 <footer class="font-sans bg-white py-8 px-4">
   <div class="mx-auto max-w-xl overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
     <a href="/" class="block mr-4 w-full md:w-1/4">
-      <img src="./logo.png" class="w-32 -ml-8 md:ml-0" alt="logo">
+      <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210385/stitches/logo.png" class="w-32 -ml-8 md:ml-0" alt="logo">
     </a>
     <div class="w-full text-grey-darkest text-sm mt-6 md:mt-0 leading-normal">
       <h4 class="py-2 uppercase font-bold text-xs tracking-wide">About US</h4>
