--- a/templates/navigation-2.html
+++ b/templates/navigation-2.html
@@ -6,7 +6,7 @@
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Products</a></li>
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
     <li class="px-6"><a href="/" >
-      <img src="./logo.png" class="h-10 sm:h-10 rounded-full" alt="logo">
+      <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210385/stitches/logo.png" class="h-10 sm:h-10 rounded-full" alt="logo">
     </a></li>
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">About Us</a></li>
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Status</a></li>
