--- a/templates/navigation-3.html
+++ b/templates/navigation-3.html
@@ -1,7 +1,7 @@
 <nav class="font-sans bg-white text-center flex justify-between my-4 mx-auto max-w-xl overflow-hidden items-center">
   <div class="flex items-center">
     <a href="/" class="mr-4 w-32">
-      <img src="./logo.png" class="rounded-full w-full" alt="logo">
+      <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210385/stitches/logo.png" class="rounded-full w-full" alt="logo">
     </a>
     <input type="search" placeholder="Search" class="text-sm transition focus:outline-0 border border-transparent focus:bg-white focus:border-grey-light placeholder-grey-darkest rounded bg-grey-lighter py-1 px-2 pl-10 appearance-none leading-normal ds-input">
     <ul class="text-sm text-grey-dark list-reset flex items-center">
