--- a/templates/cards-2.html
+++ b/templates/cards-2.html
@@ -2,7 +2,7 @@
   <div class="container container max-w-xl m-auto flex flex-wrap flex-col md:flex-row items-center justify-start">
     <div class="w-full lg:w-1/2 p-3">
       <div class="flex flex-col lg:flex-row rounded overflow-hidden h-auto lg:h-32 border shadow shadow-lg">
-        <img class="block h-auto w-full lg:w-48 flex-none bg-cover h-24" src="./demo-bg.png">
+        <img class="block h-auto w-full lg:w-48 flex-none bg-cover h-24" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png">
         <div class="bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">              
           <div class="text-black font-bold text-xl mb-2 leading-tight">Can coffee make you a better developer?</div>
           <p class="text-grey-darker text-base">Read more</p>
@@ -11,7 +11,7 @@
     </div>
     <div class="w-full lg:w-1/2 p-3">
       <div class="flex flex-col lg:flex-row rounded overflow-hidden h-auto lg:h-32 border shadow shadow-lg">
-        <img class="block h-auto w-full lg:w-48 flex-none bg-cover" src="./demo-bg.png">
+        <img class="block h-auto w-full lg:w-48 flex-none bg-cover" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png">
         <div class="bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">              
           <div class="text-black font-bold text-xl mb-2 leading-tight">Can coffee make you a better developer?</div>
           <p class="text-grey-darker text-base">Read more</p>
