--- a/templates/navigation-4.html
+++ b/templates/navigation-4.html
@@ -1,6 +1,6 @@
 <nav class="font-sans bg-white text-center flex justify-between items-center my-4 mx-auto max-w-xl overflow-hidden">
   <a href="#">
-    <img src="./logo.png" class="h-10" alt="logo">
+    <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210385/stitches/logo.png" class="h-10" alt="logo">
   </a>
   <ul class="text-sm text-grey-dark list-reset flex items-center">
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Products</a></li>
