fix sizing issue of templates

--- a/templates/features-3.html
+++ b/templates/features-3.html
@@ -6,14 +6,14 @@
   </div>
   <div class="w-full md:w-1/3 flex flex-row md:flex-col justify-between md:justify-center items-center p-2 md:p-8 items-center md:items-start">
     <div class="flex items-center sm:border-r md:border-b md:border-r-0 p-4 w-1/2 md:w-auto">
-      <img class="w-10 h-10 rounded-full mr-4 bg-grey-light" src="" alt="Avatar of Jonathan Reinink">
+      <div class="w-10 h-10 rounded-full mr-4 bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
       <div class="text-sm">
         <p class="text-black leading-none">Jonathan Reinink</p>
         <p class="text-grey-dark">Aug 18</p>
       </div>
     </div>
     <div class="flex items-center p-4 w-1/2 md:w-auto">
-      <img class="w-10 h-10 rounded-full mr-4 bg-grey-light" src="" alt="Avatar of Jonathan Reinink">
+      <div class="w-10 h-10 rounded-full mr-4 bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
       <div class="text-sm">
         <p class="text-black leading-none">Jonathan Reinink</p>
         <p class="text-grey-dark">Aug 18</p>
