--- a/templates/pricing-1.html
+++ b/templates/pricing-1.html
@@ -1,4 +1,4 @@
-<section class="font-sans container m-auto max-w-md xl:max-w-lg flex flex-col flex-wrap sm:flex-row justify-center">
+<section class="font-sans container m-auto max-w-xl xl:max-w-lg flex flex-col flex-wrap sm:flex-row justify-center">
   <div class="w-full sm:w-1/2 lg:w-1/4 text-center py-8">
     <label for="" class="uppercase tracking-loose font-bold text-sm">Basic Plan</label>
     <h1 for="" class="uppercase tracking-loose font-bold text-5xl my-2">$29<span class="text-grey-dark font-light text-xs">/mo</span></h1>
