--- a/templates/features-4.html
+++ b/templates/features-4.html
@@ -4,22 +4,22 @@
   <hr class="border-b w-8 m-auto my-6">
   <div class="flex flex-wrap max-w-xl m-auto">
     <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
-      <img class="w-10 h-10 rounded-full mr-4 bg-grey-light" src="" alt="Avatar of Jonathan Reinink">
+      <div class="w-10 h-10 rounded-full mr-4 bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
       <h2 class="my-4 font-light">Our Work Flow</h2>
       <p class="leading-normal mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
-      <img class="w-10 h-10 rounded-full mr-4 bg-grey-light" src="" alt="Avatar of Jonathan Reinink">
+      <div class="w-10 h-10 rounded-full mr-4 bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
       <h2 class="my-4 font-light">Our Work Flow</h2>
       <p class="leading-normal mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
-      <img class="w-10 h-10 rounded-full mr-4 bg-grey-light" src="" alt="Avatar of Jonathan Reinink">
+      <div class="w-10 h-10 rounded-full mr-4 bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
       <h2 class="my-4 font-light">Our Work Flow</h2>
       <p class="leading-normal mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
-      <img class="w-10 h-10 rounded-full mr-4 bg-grey-light" src="" alt="Avatar of Jonathan Reinink">
+      <div class="w-10 h-10 rounded-full mr-4 bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
       <h2 class="my-4 font-light">Our Work Flow</h2>
       <p class="leading-normal mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
