--- a/templates/features-5.html
+++ b/templates/features-5.html
@@ -5,32 +5,32 @@
   </div>
   <div class="flex flex-col sm:flex-row flex-wrap my-8">
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal">
-      <img class="w-12 h-12 rounded-full bg-grey-light" src="" alt="Avatar of Jonathan Reinink">
+      <div class="w-12 h-12 rounded-full bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
       <h3 class="mt-4 mb-1 font-light">Something</h3>
       <p class="text-black leading-none text-sm text-grey">Jonathan Reinink</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal">
-      <img class="w-12 h-12 rounded-full bg-grey-light" src="" alt="Avatar of Jonathan Reinink">
+      <div class="w-12 h-12 rounded-full bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
       <h3 class="mt-4 mb-1 font-light">Something</h3>
       <p class="text-black leading-none text-sm text-grey">Jonathan Reinink</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal">
-      <img class="w-12 h-12 rounded-full bg-grey-light" src="" alt="Avatar of Jonathan Reinink">
+      <div class="w-12 h-12 rounded-full bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
       <h3 class="mt-4 mb-1 font-light">Something</h3>
       <p class="text-black leading-none text-sm text-grey">Jonathan Reinink</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal">
-      <img class="w-12 h-12 rounded-full bg-grey-light" src="" alt="Avatar of Jonathan Reinink">
+      <div class="w-12 h-12 rounded-full bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
       <h3 class="mt-4 mb-1 font-light">Something</h3>
       <p class="text-black leading-none text-sm text-grey">Jonathan Reinink</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal">
-      <img class="w-12 h-12 rounded-full bg-grey-light" src="" alt="Avatar of Jonathan Reinink">
+      <div class="w-12 h-12 rounded-full bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
       <h3 class="mt-4 mb-1 font-light">Something</h3>
       <p class="text-black leading-none text-sm text-grey">Jonathan Reinink</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8 border-grey-lightest  hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal">
-      <img class="w-12 h-12 rounded-full bg-grey-light" src="" alt="Avatar of Jonathan Reinink">
+      <div class="w-12 h-12 rounded-full bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
       <h3 class="mt-4 mb-1 font-light">Something</h3>
       <p class="text-black leading-none text-sm text-grey">Jonathan Reinink</p>
     </div>
