--- a/templates/form-1.html
+++ b/templates/form-1.html
@@ -1,4 +1,4 @@
-<form class="font-sans text-sm rounded w-full max-w-xs mx-auto my-8 px-8 pt-6 pb-8">
+<form class="font-sans text-sm rounded w-full max-w-md mx-auto my-8 px-8 pt-6 pb-8">
   <div class="relative border rounded mb-4 shadow appearance-none label-floating">
     <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="username" type="text" placeholder="Username">
     <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="username">
