--- a/templates/hero-3.html
+++ b/templates/hero-3.html
@@ -1,5 +1,5 @@
 <section class="bg-grey-lighter font-sans">
-  <div class="container m-auto flex flex-col md:flex-row max-w-lg">
+  <div class="container m-auto flex flex-col md:flex-row max-w-xl">
     <div class="flex flex-col w-full lg:w-1/2 justify-center items-start p-8">
       <label for="tagline" class="uppercase tracking-loose">best app ever</label>
       <h1 class="my-4 font-light">Our Work Flow</h1>
