--- a/templates/features-6.html
+++ b/templates/features-6.html
@@ -1,5 +1,5 @@
 <section class="font-sans container max-w-xl m-auto flex flex-col lg:flex-row justify-center my-8">
-  <div class="order-2 lg:order-1 w-full lg:w-1/4 flex flex-col items-center lg:items-end justify-end text-center lg:text-right ml-0 lg:ml-8 mt-8">
+  <div class="order-2 lg:order-1 w-full lg:w-1/4 flex flex-col items-center lg:items-end justify-center text-center lg:text-right ml-0 lg:ml-8 mt-8">
     <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
     <h3 class="text-black mb-2 font-light">Feature 1</h3>
     <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -13,7 +13,7 @@
   <div class="order-1 lg:order-2 w-full lg:w-1/2 max-w-sm m-auto mb-6 lg:mb-0">
     <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210663/demo-phone.png" alt="">
   </div>
-  <div class="order-last w-full lg:w-1/4 flex flex-col items-center lg:items-start justify-end text-center lg:text-left mt-8 mr-8">
+  <div class="order-last w-full lg:w-1/4 flex flex-col items-center lg:items-start justify-center text-center lg:text-left mt-8 mr-8">
     <div class="w-6 h-6 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
     <h3 class="text-black mb-2 font-light">Feature 1</h3>
     <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
