--- a/templates/hero-2.html
+++ b/templates/hero-2.html
@@ -1,5 +1,5 @@
 <section class="antialiased font-sans w-full bg-grey-lighter text-left text-black py-8">
-  <div class="container mx-auto max-w-xl px-8 py-8 font-normal leading-normal">
+  <div class="container mx-auto max-w-xl py-8 font-normal leading-normal">
     <h3 class="text-2xl">Grow Your Business</h3>
     <p class="">Build high performing teams, establish design practices, mentor and grow the next generation of great designers, and design interfaces and experiences.</p>
     <div class="max-w-sm mt-4 sm:flex">
