--- a/templates/features-2.html
+++ b/templates/features-2.html
@@ -1,8 +1,7 @@
 <section class="font-sans flex flex-col lg:flex-row">
   <div class="w-full lg:w-1/2"><img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt=""></div>
   <div class="w-full lg:w-1/2 flex flex-col items-center justify-center text-center p-8">
-    <label for="tagline" class="uppercase tracking-loose">best app ever</label>
-    <h1 class="my-4 font-light">App Features</h1>
-    <p class="leading-normal mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <h1 class="my-4 font-normal">App Features</h1>
+    <p class="leading-normal mb-4 w-2/3 text-grey-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
 </section>
