--- a/templates/features-4.html
+++ b/templates/features-4.html
@@ -1,27 +1,27 @@
 <section class="font-sans container m-auto text-center py-8">
-  <label for="tagline" class="uppercase tracking-loose">best app ever</label>
+  <label for="tagline" class="uppercase tracking-wide font-bold text-grey-dark">Various Aspects</label>
   <h1 class="mt-2 mb-4 font-light max-w-sm m-auto">Those are important in Vanue Management</h1>
   <hr class="border-b w-8 m-auto my-6">
-  <div class="flex flex-wrap max-w-xl m-auto">
+  <div class="flex flex-wrap justify-between items-start">
     <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
-      <div class="w-10 h-10 rounded-full mr-4 bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
-      <h2 class="my-4 font-light">Our Work Flow</h2>
-      <p class="leading-normal mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div class="w-14 h-14 rounded-full mr-4 bg-grey-light" alt=""></div>
+      <h2 class="my-4 font-light">Cras ornare tristique elit.</h2>
+      <p class="leading-normal mb-4 text-grey-dark">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
-      <div class="w-10 h-10 rounded-full mr-4 bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
-      <h2 class="my-4 font-light">Our Work Flow</h2>
-      <p class="leading-normal mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div class="w-14 h-14 rounded-full mr-4 bg-grey-light" alt=""></div>
+      <h2 class="my-4 font-light">Vivamus vestibulum ntulla nec ante.</h2>
+      <p class="leading-normal mb-4 text-grey-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
-      <div class="w-10 h-10 rounded-full mr-4 bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
-      <h2 class="my-4 font-light">Our Work Flow</h2>
-      <p class="leading-normal mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div class="w-14 h-14 rounded-full mr-4 bg-grey-light" alt=""></div>
+      <h2 class="my-4 font-light">Praesent placerat risus quis eros.</h2>
+      <p class="leading-normal mb-4 text-grey-dark">Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center p-4">
-      <div class="w-10 h-10 rounded-full mr-4 bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
-      <h2 class="my-4 font-light">Our Work Flow</h2>
-      <p class="leading-normal mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div class="w-14 h-14 rounded-full mr-4 bg-grey-light" alt=""></div>
+      <h2 class="my-4 font-light">Fusce pellentesque suscipit nibh.</h2>
+      <p class="leading-normal mb-4 text-grey-dark">Praesent dapibus, neque id cursus faucibus, tortor neque egestas auguae, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</p>
     </div>
   </div>
 </section>
