--- a/templates/hero-3.html
+++ b/templates/hero-3.html
@@ -1,6 +1,6 @@
 <section class="bg-grey-lighter font-sans">
   <div class="container m-auto flex flex-col md:flex-row max-w-xl">
-    <div class="flex flex-col w-full lg:w-1/2 justify-center items-start p-8">
+    <div class="flex flex-col w-full lg:w-1/2 justify-center items-start py-8">
       <label for="tagline" class="uppercase tracking-loose">best app ever</label>
       <h1 class="my-4 font-light">Our Work Flow</h1>
       <p class="leading-normal mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, ex ea commodo consequat.   Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium natus error sit.</p>
