--- a/public/stitches.css
+++ b/public/stitches.css
@@ -669,7 +669,7 @@ button,
 }
 
 .bg-black {
-  background-color: #22292f;
+  background-color: #020203;
 }
 
 .bg-grey-darkest {
@@ -709,7 +709,7 @@ button,
 }
 
 .hover\:bg-black:hover {
-  background-color: #22292f;
+  background-color: #020203;
 }
 
 .hover\:bg-grey-darkest:hover {
@@ -797,7 +797,7 @@ button,
 }
 
 .border-black {
-  border-color: #22292f;
+  border-color: #020203;
 }
 
 .border-grey-darkest {
@@ -2718,7 +2718,7 @@ button,
 }
 
 .text-black {
-  color: #22292f;
+  color: #020203;
 }
 
 .text-grey-darkest {
@@ -2758,7 +2758,7 @@ button,
 }
 
 .hover\:text-black:hover {
-  color: #22292f;
+  color: #020203;
 }
 
 .hover\:text-grey-darkest:hover {
@@ -3287,7 +3287,7 @@ button,
   }
 
   .xs\:bg-black {
-    background-color: #22292f;
+    background-color: #020203;
   }
 
   .xs\:bg-grey-darkest {
@@ -3327,7 +3327,7 @@ button,
   }
 
   .xs\:hover\:bg-black:hover {
-    background-color: #22292f;
+    background-color: #020203;
   }
 
   .xs\:hover\:bg-grey-darkest:hover {
@@ -3403,7 +3403,7 @@ button,
   }
 
   .xs\:border-black {
-    border-color: #22292f;
+    border-color: #020203;
   }
 
   .xs\:border-grey-darkest {
@@ -5316,7 +5316,7 @@ button,
   }
 
   .xs\:text-black {
-    color: #22292f;
+    color: #020203;
   }
 
   .xs\:text-grey-darkest {
@@ -5356,7 +5356,7 @@ button,
   }
 
   .xs\:hover\:text-black:hover {
-    color: #22292f;
+    color: #020203;
   }
 
   .xs\:hover\:text-grey-darkest:hover {
@@ -5805,7 +5805,7 @@ button,
   }
 
   .sm\:bg-black {
-    background-color: #22292f;
+    background-color: #020203;
   }
 
   .sm\:bg-grey-darkest {
@@ -5845,7 +5845,7 @@ button,
   }
 
   .sm\:hover\:bg-black:hover {
-    background-color: #22292f;
+    background-color: #020203;
   }
 
   .sm\:hover\:bg-grey-darkest:hover {
@@ -5921,7 +5921,7 @@ button,
   }
 
   .sm\:border-black {
-    border-color: #22292f;
+    border-color: #020203;
   }
 
   .sm\:border-grey-darkest {
@@ -7834,7 +7834,7 @@ button,
   }
 
   .sm\:text-black {
-    color: #22292f;
+    color: #020203;
   }
 
   .sm\:text-grey-darkest {
@@ -7874,7 +7874,7 @@ button,
   }
 
   .sm\:hover\:text-black:hover {
-    color: #22292f;
+    color: #020203;
   }
 
   .sm\:hover\:text-grey-darkest:hover {
@@ -8323,7 +8323,7 @@ button,
   }
 
   .md\:bg-black {
-    background-color: #22292f;
+    background-color: #020203;
   }
 
   .md\:bg-grey-darkest {
@@ -8363,7 +8363,7 @@ button,
   }
 
   .md\:hover\:bg-black:hover {
-    background-color: #22292f;
+    background-color: #020203;
   }
 
   .md\:hover\:bg-grey-darkest:hover {
@@ -8439,7 +8439,7 @@ button,
   }
 
   .md\:border-black {
-    border-color: #22292f;
+    border-color: #020203;
   }
 
   .md\:border-grey-darkest {
@@ -10352,7 +10352,7 @@ button,
   }
 
   .md\:text-black {
-    color: #22292f;
+    color: #020203;
   }
 
   .md\:text-grey-darkest {
@@ -10392,7 +10392,7 @@ button,
   }
 
   .md\:hover\:text-black:hover {
-    color: #22292f;
+    color: #020203;
   }
 
   .md\:hover\:text-grey-darkest:hover {
@@ -10841,7 +10841,7 @@ button,
   }
 
   .lg\:bg-black {
-    background-color: #22292f;
+    background-color: #020203;
   }
 
   .lg\:bg-grey-darkest {
@@ -10881,7 +10881,7 @@ button,
   }
 
   .lg\:hover\:bg-black:hover {
-    background-color: #22292f;
+    background-color: #020203;
   }
 
   .lg\:hover\:bg-grey-darkest:hover {
@@ -10957,7 +10957,7 @@ button,
   }
 
   .lg\:border-black {
-    border-color: #22292f;
+    border-color: #020203;
   }
 
   .lg\:border-grey-darkest {
@@ -12870,7 +12870,7 @@ button,
   }
 
   .lg\:text-black {
-    color: #22292f;
+    color: #020203;
   }
 
   .lg\:text-grey-darkest {
@@ -12910,7 +12910,7 @@ button,
   }
 
   .lg\:hover\:text-black:hover {
-    color: #22292f;
+    color: #020203;
   }
 
   .lg\:hover\:text-grey-darkest:hover {
@@ -13359,7 +13359,7 @@ button,
   }
 
   .xl\:bg-black {
-    background-color: #22292f;
+    background-color: #020203;
   }
 
   .xl\:bg-grey-darkest {
@@ -13399,7 +13399,7 @@ button,
   }
 
   .xl\:hover\:bg-black:hover {
-    background-color: #22292f;
+    background-color: #020203;
   }
 
   .xl\:hover\:bg-grey-darkest:hover {
@@ -13475,7 +13475,7 @@ button,
   }
 
   .xl\:border-black {
-    border-color: #22292f;
+    border-color: #020203;
   }
 
   .xl\:border-grey-darkest {
@@ -15388,7 +15388,7 @@ button,
   }
 
   .xl\:text-black {
-    color: #22292f;
+    color: #020203;
   }
 
   .xl\:text-grey-darkest {
@@ -15428,7 +15428,7 @@ button,
   }
 
   .xl\:hover\:text-black:hover {
-    color: #22292f;
+    color: #020203;
   }
 
   .xl\:hover\:text-grey-darkest:hover {
