--- a/templates/features-3.html
+++ b/templates/features-3.html
@@ -1,7 +1,7 @@
 <section class="my-8 font-sans container max-w-xl m-auto flex flex-col md:flex-row sm:items-center">
   <div class="w-full md:w-1/2 flex flex-col justify-center items-start px-6 py-0 md:py-8 md:px-8 lg:items-start">
-    <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">best app ever</label>
-    <h1 class="mt-2 mb-4 font-light">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</h1>
+    <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">various aspects</label>
+    <h1 class="mt-2 mb-4 font-medium">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</h1>
     <p class="leading-normal mb-4 text-grey-dark">Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.
     Praesent dapibus, neque id cursus faucibus, tortor neque egestas auguae, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.
     Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus. Nam nulla quam, gravida non, commodo a, sodales sit amet, nisi.</p>
@@ -10,14 +10,14 @@
     <div class="flex items-center sm:border-r md:border-b md:border-r-0 p-4 w-1/2 md:w-auto">
       <div class="w-14 h-14 rounded-full mr-4 bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
       <div class="">
-        <h2 class="text-black font-normal">Aliquam tincidunt mauris eu risus.</h2>
+        <h2 class="text-black font-medium">Aliquam tincidunt mauris eu risus.</h2>
         <p class="text-grey-dark leading-normal">Praesent dapibus, neque id cursus faucibus, tortor neque egestas auguae, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</p>
       </div>
     </div>
     <div class="flex items-center p-4 w-1/2 md:w-auto">
       <div class="w-14 h-14 rounded-full mr-4 bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
       <div class="">
-        <h2 class="text-black font-normal">Vestibulum auctor dapibus neque.</h2>
+        <h2 class="text-black font-medium">Vestibulum auctor dapibus neque.</h2>
         <p class="text-grey-dark leading-normal">Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</p>
       </div>
     </div>
