--- a/templates/features-5.html
+++ b/templates/features-5.html
@@ -1,6 +1,6 @@
 <section class="my-8 font-sans container m-auto max-w-xl ">
   <div class="text-center">
-    <h1 class="my-4 font-light">Show Your Work</h1>
+    <h1 class="my-4 font-medium">Show Your Work</h1>
     <p class="leading-normal mb-4 max-w-sm m-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
   <div class="flex flex-col sm:flex-row flex-wrap my-8">
