--- a/templates/features-1.html
+++ b/templates/features-1.html
@@ -2,14 +2,14 @@
   <div class="w-full lg:w-1/2"><img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt=""></div>
   <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
     <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">best app ever</label>
-    <h1 class="my-4 font-light">Our Work Flow</h1>
+    <h1 class="my-4 font-medium">Our Work Flow</h1>
     <p class="leading-normal mb-4 text-grey-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
 </section>
 <section class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
   <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
     <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">best app ever</label>
-    <h1 class="my-4 font-light">Our Work Flow</h1>
+    <h1 class="my-4 font-medium">Our Work Flow</h1>
     <p class="leading-normal mb-4 text-grey-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
   <div class="w-full lg:w-1/2"><img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt=""></div>
