--- a/templates/navigation-1.html
+++ b/templates/navigation-1.html
@@ -7,7 +7,7 @@
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
     <li class="pr-2"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">FAQs</a></li>
     <li class="pl-2 border-l"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
-    <button class="bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3 rounded">
+    <button class="bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3">
     Sign Up
     </button>
   </ul>
