--- a/templates/features-5.html
+++ b/templates/features-5.html
@@ -6,32 +6,32 @@
   <div class="flex flex-col sm:flex-row flex-wrap my-8">
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
       <div class="w-12 h-12 rounded-full bg-grey-light" alt=""></div>
-      <h3 class="mt-4 mb-1 font-light">Digital</h3>
+      <h3 class="mt-4 mb-1">Digital</h3>
       <p class="mt-4 text-center text-grey-dark leading-normal px-6 hidden hover:block">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
       <div class="w-12 h-12 rounded-full bg-grey-light" alt=""></div>
-      <h3 class="mt-4 mb-1 font-light">Branding</h3>
+      <h3 class="mt-4 mb-1">Branding</h3>
       <p class="mt-4 text-center text-grey-dark leading-normal hidden hover:block">Praesent dapibus, neque id cursus faucibus, tortor neque egestas auguae, eu vulputate magna eros eu erat. Aliquam erat volutpat.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
       <div class="w-12 h-12 rounded-full bg-grey-light" alt=""></div>
-      <h3 class="mt-4 mb-1 font-light">Excellence</h3>
+      <h3 class="mt-4 mb-1">Excellence</h3>
       <p class="mt-4 text-center text-grey-dark leading-normal hidden hover:block">Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
       <div class="w-12 h-12 rounded-full bg-grey-light" alt=""></div>
-      <h3 class="mt-4 mb-1 font-light">Strategy</h3>
+      <h3 class="mt-4 mb-1">Strategy</h3>
       <p class="mt-4 text-center text-grey-dark leading-normal hidden hover:block">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
       <div class="w-12 h-12 rounded-full bg-grey-light" alt=""></div>
-      <h3 class="mt-4 mb-1 font-light">Design</h3>
+      <h3 class="mt-4 mb-1">Design</h3>
       <p class="mt-4 text-center text-grey-dark leading-normal hidden hover:block">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8 border-grey-lightest  hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
       <div class="w-12 h-12 rounded-full bg-grey-light" alt=""></div>
-      <h3 class="mt-4 mb-1 font-light">Development</h3>
+      <h3 class="mt-4 mb-1">Development</h3>
       <p class="mt-4 text-center text-grey-dark leading-normal hidden hover:block">Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. </p>
     </div>
   </div>
