--- a/templates/footer-1.html
+++ b/templates/footer-1.html
@@ -1,32 +1,32 @@
 <footer class="font-sans bg-black text-white py-8 px-4">
-  <div class="mx-auto max-w-xl overflow-hidden flex flex-col lg:flex-row justify-between">
+  <div class="mx-auto container overflow-hidden flex flex-col lg:flex-row justify-between">
     <a href="/" class="block mr-4 w-1/2">
       <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210395/stitches/logo-white.png" class="w-32" alt="logo">
     </a>
     <div class="w-1/2 flex text-sm mt-6 lg:mt-0">
       <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
-        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Product</li>
+        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wide">Product</li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Popular</a></li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Trending</a></li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Catalog</a></li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Features</a></li>
       </ul>
       <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
-        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Company</li>
+        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wide">Company</li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Press Release</a></li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Mission</a></li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Strategy</a></li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Works</a></li>
       </ul>
       <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
-        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Info</li>
+        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wide">Info</li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Support</a></li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Developers</a></li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Customer Services</a></li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Started Guide</a></li>
       </ul>
       <div class="text-grey-dark flex flex-col">
-        <div class="inline-block py-2 px-3 text-white uppercase font-medium text-xs tracking-wide">Follow Us</div>
+        <div class="inline-block py-2 px-3 text-white uppercase font-medium tracking-wide">Follow Us</div>
         <div class="flex pl-4 justify-start">
           <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
           <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
@@ -35,5 +35,5 @@
       </div>
     </div>
   </div>
-  <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-darkest text-center"> ©2018 Hyperyolo. All rights reserved.</div>
+  <div class="pt-4 mt-4 text-grey-darker border-t border-grey-darkest text-center"> ©2018 Hyperyolo. All rights reserved.</div>
 </footer>
