--- a/templates/navigation-2.html
+++ b/templates/navigation-2.html
@@ -1,5 +1,5 @@
 <nav class="font-sans bg-white text-center flex justify-between items-center my-4 mx-auto max-w-xl overflow-hidden">
-  <button class="bg-transparent text-sm hover:text-grey-dark text-grey-darkest py-2 px-3 rounded">
+  <button class="bg-transparent text-sm hover:text-grey-dark text-grey-darkest py-2 px-3">
   Subscribe
   </button>
   <ul class="text-sm text-grey-dark list-reset flex items-center">
@@ -11,7 +11,7 @@
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">About Us</a></li>
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Status</a></li>
   </ul>
-  <button class="text-sm bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3 rounded">
+  <button class="text-sm bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3">
   Log In
   </button>
 </nav>
