--- a/templates/navigation-4.html
+++ b/templates/navigation-4.html
@@ -11,7 +11,7 @@
   <ul class="text-sm text-grey-dark list-reset flex items-center">
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
     <li>
-      <button class="bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3 rounded">
+      <button class="bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3">
       Sign Up
       </button>
     </li>
