--- a/templates/stats-1.html
+++ b/templates/stats-1.html
@@ -1,6 +1,6 @@
 <section class="bg-white py-4 font-sans">
   <div class="container max-w-xl m-auto flex flex-wrap md:flex-no-wrap items-center justify-center">
-    <h1 class="w-full md:w-1/4 font-medium tracking-wide mb-4 md:mb-0">Important<br>Stats</h1>
+    <h1 class="w-full md:w-1/4 font-medium tracking-normal mb-4 md:mb-0">Important<br>Stats</h1>
     <div class="w-1/3 md:w-1/4">
       <span class="text-xs inline-block mr-2 uppercase text-grey-darkest tracking-wide">clickrate</span>
       <h2 class="inline-block">34%</h2>
