add more changes

--- a/templates/cards-1.html
+++ b/templates/cards-1.html
@@ -5,7 +5,7 @@
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-display text-grey-darkest mb-4">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
             <span class="text-grey-dark text-sm">Read More</span>
           </p>
@@ -17,7 +17,7 @@
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-display text-grey-darkest mb-4">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
             <span class="text-grey-dark text-sm">Read More</span>
           </p>
@@ -29,7 +29,7 @@
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-display text-grey-darkest mb-4">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
             <span class="text-grey-dark text-sm">Read More</span>
           </p>
@@ -41,7 +41,7 @@
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-display text-grey-darkest mb-4">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
             <span class="text-grey-dark text-sm">Read More</span>
           </p>
@@ -53,7 +53,7 @@
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-display text-grey-darkest mb-4">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
             <span class="text-grey-dark text-sm">Read More</span>
           </p>
