--- a/templates/form-1.html
+++ b/templates/form-1.html
@@ -12,7 +12,7 @@
     </label>
   </div>
   <div class="flex items-center justify-between">
-    <button class="bg-grey-darkest hover:bg-black text-white py-2 px-4 rounded" type="button">
+    <button class="bg-black hover:bg-black text-white py-2 px-4" type="button">
     Sign In
     </button>
     <a class="inline-block align-baseline text-grey hover:text-grey-darker" href="#">
