--- a/templates/hero-3.html
+++ b/templates/hero-3.html
@@ -4,7 +4,7 @@
       <label for="tagline" class="uppercase tracking-loose">best app ever</label>
       <h1 class="my-4 font-normal">Our Work Flow</h1>
       <p class="leading-normal mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, ex ea commodo consequat.   Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium natus error sit.</p>
-      <button class="bg-transparent hover:bg-black text-black font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent rounded">Learn More</button>
+      <button class="bg-transparent hover:bg-black text-black font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">Learn More</button>
     </div>
     <div class="w-full lg:w-1/2 lg:py-6"><img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-devices.png" alt="image" class="w-full"></div>
   </div>
