--- a/templates/stats-2.html
+++ b/templates/stats-2.html
@@ -14,7 +14,7 @@
         <span class="text-xs block uppercase text-grey-darkest tracking-wide mt-1">influence</span>
       </div>
     </div>
-    <button class="w-full md:w-32 bg-grey-darkest hover:bg-black text-white py-2 px-4 rounded mt-6 md:mt-0" type="button">
+    <button class="w-full md:w-32 bg-black hover:bg-black text-white py-2 px-4 mt-6 md:mt-0" type="button">
     Read More
     </button>
   </div>
