--- a/templates/navigation-1.html
+++ b/templates/navigation-1.html
@@ -1,4 +1,4 @@
-<nav class="font-sans bg-white text-center flex justify-between my-4 mx-auto max-w-xl overflow-hidden">
+<nav class="font-sans bg-white text-center flex justify-between my-4 mx-auto container overflow-hidden">
   <a href="/" class="block text-left">
     <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210385/stitches/logo.png" class="h-10 sm:h-10 rounded-full" alt="logo">
   </a>
@@ -7,7 +7,7 @@
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
     <li class="pr-2"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">FAQs</a></li>
     <li class="pl-2 border-l"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
-    <button class="bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3">
+    <button class="bg-black hover:bg-grey-darker text-white ml-4 py-2 px-3">
     Sign Up
     </button>
   </ul>
