--- a/templates/navigation-4.html
+++ b/templates/navigation-4.html
@@ -1,4 +1,4 @@
-<nav class="font-sans bg-white text-center flex justify-between items-center my-4 mx-auto max-w-xl overflow-hidden">
+<nav class="font-sans bg-white text-center flex justify-between items-center my-4 mx-auto container overflow-hidden">
   <a href="#">
     <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210385/stitches/logo.png" class="h-10" alt="logo">
   </a>
@@ -11,7 +11,7 @@
   <ul class="text-sm text-grey-dark list-reset flex items-center">
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
     <li>
-      <button class="bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3">
+      <button class="bg-black hover:bg-grey-darker text-white ml-4 py-2 px-3">
       Sign Up
       </button>
     </li>
