--- a/public/stitches.css
+++ b/public/stitches.css
@@ -2933,86 +2933,6 @@ button,
   letter-spacing: .1em;
 }
 
-.select-none {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.select-text {
-  -webkit-user-select: text;
-     -moz-user-select: text;
-      -ms-user-select: text;
-          user-select: text;
-}
-
-.align-baseline {
-  vertical-align: baseline;
-}
-
-.align-top {
-  vertical-align: top;
-}
-
-.align-middle {
-  vertical-align: middle;
-}
-
-.align-bottom {
-  vertical-align: bottom;
-}
-
-.align-text-top {
-  vertical-align: text-top;
-}
-
-.align-text-bottom {
-  vertical-align: text-bottom;
-}
-
-.visible {
-  visibility: visible;
-}
-
-.invisible {
-  visibility: hidden;
-}
-
-.whitespace-normal {
-  white-space: normal;
-}
-
-.whitespace-no-wrap {
-  white-space: nowrap;
-}
-
-.whitespace-pre {
-  white-space: pre;
-}
-
-.whitespace-pre-line {
-  white-space: pre-line;
-}
-
-.whitespace-pre-wrap {
-  white-space: pre-wrap;
-}
-
-.break-words {
-  word-wrap: break-word;
-}
-
-.break-normal {
-  word-wrap: normal;
-}
-
-.truncate {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .w-1 {
   width: .25rem;
 }
@@ -3125,34 +3045,6 @@ button,
   width: 100vw;
 }
 
-.z-0 {
-  z-index: 0;
-}
-
-.z-10 {
-  z-index: 10;
-}
-
-.z-20 {
-  z-index: 20;
-}
-
-.z-30 {
-  z-index: 30;
-}
-
-.z-40 {
-  z-index: 40;
-}
-
-.z-50 {
-  z-index: 50;
-}
-
-.z-auto {
-  z-index: auto;
-}
-
 .container {
   width: 100%;
 }
@@ -3188,6 +3080,10 @@ button,
 }
 
 /* Stitches classes */
+
+button:focus {
+  outline: 0;
+}
 
 .label-floating input:not(:placeholder-shown) {
   padding-top: 1.4rem;
@@ -5531,86 +5427,6 @@ button,
     letter-spacing: .1em;
   }
 
-  .xs\:select-none {
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-  }
-
-  .xs\:select-text {
-    -webkit-user-select: text;
-       -moz-user-select: text;
-        -ms-user-select: text;
-            user-select: text;
-  }
-
-  .xs\:align-baseline {
-    vertical-align: baseline;
-  }
-
-  .xs\:align-top {
-    vertical-align: top;
-  }
-
-  .xs\:align-middle {
-    vertical-align: middle;
-  }
-
-  .xs\:align-bottom {
-    vertical-align: bottom;
-  }
-
-  .xs\:align-text-top {
-    vertical-align: text-top;
-  }
-
-  .xs\:align-text-bottom {
-    vertical-align: text-bottom;
-  }
-
-  .xs\:visible {
-    visibility: visible;
-  }
-
-  .xs\:invisible {
-    visibility: hidden;
-  }
-
-  .xs\:whitespace-normal {
-    white-space: normal;
-  }
-
-  .xs\:whitespace-no-wrap {
-    white-space: nowrap;
-  }
-
-  .xs\:whitespace-pre {
-    white-space: pre;
-  }
-
-  .xs\:whitespace-pre-line {
-    white-space: pre-line;
-  }
-
-  .xs\:whitespace-pre-wrap {
-    white-space: pre-wrap;
-  }
-
-  .xs\:break-words {
-    word-wrap: break-word;
-  }
-
-  .xs\:break-normal {
-    word-wrap: normal;
-  }
-
-  .xs\:truncate {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-
   .xs\:w-1 {
     width: .25rem;
   }
@@ -5721,34 +5537,6 @@ button,
 
   .xs\:w-screen {
     width: 100vw;
-  }
-
-  .xs\:z-0 {
-    z-index: 0;
-  }
-
-  .xs\:z-10 {
-    z-index: 10;
-  }
-
-  .xs\:z-20 {
-    z-index: 20;
-  }
-
-  .xs\:z-30 {
-    z-index: 30;
-  }
-
-  .xs\:z-40 {
-    z-index: 40;
-  }
-
-  .xs\:z-50 {
-    z-index: 50;
-  }
-
-  .xs\:z-auto {
-    z-index: auto;
   }
 
   .xs\:order-first {
@@ -8049,86 +7837,6 @@ button,
     letter-spacing: .1em;
   }
 
-  .sm\:select-none {
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-  }
-
-  .sm\:select-text {
-    -webkit-user-select: text;
-       -moz-user-select: text;
-        -ms-user-select: text;
-            user-select: text;
-  }
-
-  .sm\:align-baseline {
-    vertical-align: baseline;
-  }
-
-  .sm\:align-top {
-    vertical-align: top;
-  }
-
-  .sm\:align-middle {
-    vertical-align: middle;
-  }
-
-  .sm\:align-bottom {
-    vertical-align: bottom;
-  }
-
-  .sm\:align-text-top {
-    vertical-align: text-top;
-  }
-
-  .sm\:align-text-bottom {
-    vertical-align: text-bottom;
-  }
-
-  .sm\:visible {
-    visibility: visible;
-  }
-
-  .sm\:invisible {
-    visibility: hidden;
-  }
-
-  .sm\:whitespace-normal {
-    white-space: normal;
-  }
-
-  .sm\:whitespace-no-wrap {
-    white-space: nowrap;
-  }
-
-  .sm\:whitespace-pre {
-    white-space: pre;
-  }
-
-  .sm\:whitespace-pre-line {
-    white-space: pre-line;
-  }
-
-  .sm\:whitespace-pre-wrap {
-    white-space: pre-wrap;
-  }
-
-  .sm\:break-words {
-    word-wrap: break-word;
-  }
-
-  .sm\:break-normal {
-    word-wrap: normal;
-  }
-
-  .sm\:truncate {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-
   .sm\:w-1 {
     width: .25rem;
   }
@@ -8239,34 +7947,6 @@ button,
 
   .sm\:w-screen {
     width: 100vw;
-  }
-
-  .sm\:z-0 {
-    z-index: 0;
-  }
-
-  .sm\:z-10 {
-    z-index: 10;
-  }
-
-  .sm\:z-20 {
-    z-index: 20;
-  }
-
-  .sm\:z-30 {
-    z-index: 30;
-  }
-
-  .sm\:z-40 {
-    z-index: 40;
-  }
-
-  .sm\:z-50 {
-    z-index: 50;
-  }
-
-  .sm\:z-auto {
-    z-index: auto;
   }
 
   .sm\:order-first {
@@ -10567,86 +10247,6 @@ button,
     letter-spacing: .1em;
   }
 
-  .md\:select-none {
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-  }
-
-  .md\:select-text {
-    -webkit-user-select: text;
-       -moz-user-select: text;
-        -ms-user-select: text;
-            user-select: text;
-  }
-
-  .md\:align-baseline {
-    vertical-align: baseline;
-  }
-
-  .md\:align-top {
-    vertical-align: top;
-  }
-
-  .md\:align-middle {
-    vertical-align: middle;
-  }
-
-  .md\:align-bottom {
-    vertical-align: bottom;
-  }
-
-  .md\:align-text-top {
-    vertical-align: text-top;
-  }
-
-  .md\:align-text-bottom {
-    vertical-align: text-bottom;
-  }
-
-  .md\:visible {
-    visibility: visible;
-  }
-
-  .md\:invisible {
-    visibility: hidden;
-  }
-
-  .md\:whitespace-normal {
-    white-space: normal;
-  }
-
-  .md\:whitespace-no-wrap {
-    white-space: nowrap;
-  }
-
-  .md\:whitespace-pre {
-    white-space: pre;
-  }
-
-  .md\:whitespace-pre-line {
-    white-space: pre-line;
-  }
-
-  .md\:whitespace-pre-wrap {
-    white-space: pre-wrap;
-  }
-
-  .md\:break-words {
-    word-wrap: break-word;
-  }
-
-  .md\:break-normal {
-    word-wrap: normal;
-  }
-
-  .md\:truncate {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-
   .md\:w-1 {
     width: .25rem;
   }
@@ -10757,34 +10357,6 @@ button,
 
   .md\:w-screen {
     width: 100vw;
-  }
-
-  .md\:z-0 {
-    z-index: 0;
-  }
-
-  .md\:z-10 {
-    z-index: 10;
-  }
-
-  .md\:z-20 {
-    z-index: 20;
-  }
-
-  .md\:z-30 {
-    z-index: 30;
-  }
-
-  .md\:z-40 {
-    z-index: 40;
-  }
-
-  .md\:z-50 {
-    z-index: 50;
-  }
-
-  .md\:z-auto {
-    z-index: auto;
   }
 
   .md\:order-first {
@@ -13085,86 +12657,6 @@ button,
     letter-spacing: .1em;
   }
 
-  .lg\:select-none {
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-  }
-
-  .lg\:select-text {
-    -webkit-user-select: text;
-       -moz-user-select: text;
-        -ms-user-select: text;
-            user-select: text;
-  }
-
-  .lg\:align-baseline {
-    vertical-align: baseline;
-  }
-
-  .lg\:align-top {
-    vertical-align: top;
-  }
-
-  .lg\:align-middle {
-    vertical-align: middle;
-  }
-
-  .lg\:align-bottom {
-    vertical-align: bottom;
-  }
-
-  .lg\:align-text-top {
-    vertical-align: text-top;
-  }
-
-  .lg\:align-text-bottom {
-    vertical-align: text-bottom;
-  }
-
-  .lg\:visible {
-    visibility: visible;
-  }
-
-  .lg\:invisible {
-    visibility: hidden;
-  }
-
-  .lg\:whitespace-normal {
-    white-space: normal;
-  }
-
-  .lg\:whitespace-no-wrap {
-    white-space: nowrap;
-  }
-
-  .lg\:whitespace-pre {
-    white-space: pre;
-  }
-
-  .lg\:whitespace-pre-line {
-    white-space: pre-line;
-  }
-
-  .lg\:whitespace-pre-wrap {
-    white-space: pre-wrap;
-  }
-
-  .lg\:break-words {
-    word-wrap: break-word;
-  }
-
-  .lg\:break-normal {
-    word-wrap: normal;
-  }
-
-  .lg\:truncate {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-
   .lg\:w-1 {
     width: .25rem;
   }
@@ -13275,34 +12767,6 @@ button,
 
   .lg\:w-screen {
     width: 100vw;
-  }
-
-  .lg\:z-0 {
-    z-index: 0;
-  }
-
-  .lg\:z-10 {
-    z-index: 10;
-  }
-
-  .lg\:z-20 {
-    z-index: 20;
-  }
-
-  .lg\:z-30 {
-    z-index: 30;
-  }
-
-  .lg\:z-40 {
-    z-index: 40;
-  }
-
-  .lg\:z-50 {
-    z-index: 50;
-  }
-
-  .lg\:z-auto {
-    z-index: auto;
   }
 
   .lg\:order-first {
@@ -15603,86 +15067,6 @@ button,
     letter-spacing: .1em;
   }
 
-  .xl\:select-none {
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-  }
-
-  .xl\:select-text {
-    -webkit-user-select: text;
-       -moz-user-select: text;
-        -ms-user-select: text;
-            user-select: text;
-  }
-
-  .xl\:align-baseline {
-    vertical-align: baseline;
-  }
-
-  .xl\:align-top {
-    vertical-align: top;
-  }
-
-  .xl\:align-middle {
-    vertical-align: middle;
-  }
-
-  .xl\:align-bottom {
-    vertical-align: bottom;
-  }
-
-  .xl\:align-text-top {
-    vertical-align: text-top;
-  }
-
-  .xl\:align-text-bottom {
-    vertical-align: text-bottom;
-  }
-
-  .xl\:visible {
-    visibility: visible;
-  }
-
-  .xl\:invisible {
-    visibility: hidden;
-  }
-
-  .xl\:whitespace-normal {
-    white-space: normal;
-  }
-
-  .xl\:whitespace-no-wrap {
-    white-space: nowrap;
-  }
-
-  .xl\:whitespace-pre {
-    white-space: pre;
-  }
-
-  .xl\:whitespace-pre-line {
-    white-space: pre-line;
-  }
-
-  .xl\:whitespace-pre-wrap {
-    white-space: pre-wrap;
-  }
-
-  .xl\:break-words {
-    word-wrap: break-word;
-  }
-
-  .xl\:break-normal {
-    word-wrap: normal;
-  }
-
-  .xl\:truncate {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-
   .xl\:w-1 {
     width: .25rem;
   }
@@ -15793,34 +15177,6 @@ button,
 
   .xl\:w-screen {
     width: 100vw;
-  }
-
-  .xl\:z-0 {
-    z-index: 0;
-  }
-
-  .xl\:z-10 {
-    z-index: 10;
-  }
-
-  .xl\:z-20 {
-    z-index: 20;
-  }
-
-  .xl\:z-30 {
-    z-index: 30;
-  }
-
-  .xl\:z-40 {
-    z-index: 40;
-  }
-
-  .xl\:z-50 {
-    z-index: 50;
-  }
-
-  .xl\:z-auto {
-    z-index: auto;
   }
 
   .xl\:order-first {
