point to different fonts

--- a/public/stitches.css
+++ b/public/stitches.css
@@ -1521,7 +1521,7 @@ button,
 }
 
 .font-sans {
-  font-family: AvenirNext, Helvetica Neue, sans-serif;
+  font-family: Muli, AvenirNext, Helvetica Neue, sans-serif;
 }
 
 .font-serif {
