swap cdn address

--- a/templates/cards-1.html
+++ b/templates/cards-1.html
@@ -3,7 +3,7 @@
 
     <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
+        <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
           <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
@@ -15,7 +15,7 @@
 
     <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
+        <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
           <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
@@ -27,7 +27,7 @@
 
     <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
+        <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
           <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
@@ -39,7 +39,7 @@
 
     <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
+        <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
           <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
@@ -51,7 +51,7 @@
 
     <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210657/demo-bg.png" alt="Sunset in the mountains">
+        <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
           <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
