--- a/templates/features-6.html
+++ b/templates/features-6.html
@@ -11,7 +11,7 @@
     <p class="text-grey-darker leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
     </div>
   <div class="order-1 lg:order-2 w-full lg:w-1/2 max-w-sm m-auto mb-6 lg:mb-0">
-    <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210663/demo-phone.png" alt="">
+    <img src="https://s3-us-west-2.amazonaws.com/968335633380.us-west-2.media/stitches/demo-phone.png" alt="">
   </div>
   <div class="order-last w-full lg:w-1/4 flex flex-col items-center lg:items-start justify-center text-center lg:text-left mt-8 mr-8">
     <div class="w-12 h-12 rounded-full bg-grey-light mb-2" alt="Avatar of Jonathan Reinink"></div>
