--- a/templates/footer-1.html
+++ b/templates/footer-1.html
@@ -1,7 +1,7 @@
 <footer class="font-sans bg-black text-white py-8 px-4">
   <div class="mx-auto container overflow-hidden flex flex-col lg:flex-row justify-between">
     <a href="/" class="block mr-4 w-1/2">
-      <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210395/stitches/logo-white.png" class="w-32" alt="logo">
+      <img src="https://stitches-cdn.hyperyolo.com/logo-white.png" class="w-32" alt="logo">
     </a>
     <div class="w-1/2 flex text-sm mt-6 lg:mt-0">
       <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
