--- a/templates/footer-2.html
+++ b/templates/footer-2.html
@@ -2,7 +2,7 @@
   <div class="mx-auto max-w-xl overflow-hidden flex justify-between items-center">
     <ul class="text-sm text-grey-dark list-reset flex items-center">
       <li> <a href="/" class="block mr-4 w-32">
-      <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210395/stitches/logo-white.png" class="" alt="logo">
+      <img src="https://stitches-cdn.hyperyolo.com/logo-white.png" class="" alt="logo">
     </a></li>
       <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Product</a></li>
       <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Company</a></li>
