--- a/templates/navigation-1.html
+++ b/templates/navigation-1.html
@@ -1,6 +1,6 @@
 <nav class="font-sans bg-white text-center flex justify-between my-4 mx-auto container overflow-hidden">
   <a href="/" class="block text-left">
-    <img src="https://res.cloudinary.com/hyperyolo/image/upload/v1531210385/stitches/logo.png" class="h-10 sm:h-10 rounded-full" alt="logo">
+    <img src="https://stitches-cdn.hyperyolo.com/logo.png" class="h-10 sm:h-10 rounded-full" alt="logo">
   </a>
   <ul class="text-sm text-grey-dark list-reset flex items-center">
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Products</a></li>
